# fair-coin-toss

./: Cargo.toml  README.md
src/: alice.rs  bob.rs  main.rs  utils.rs
